...
  bool get isLoading => _authViewModel.isLoading;
  bool get showSuccess => _showSuccess;
  bool get isLoginDisabled => isLoading || _showSuccess;

  String? identifierValidator(String? value) {
    return Validatorless.multiple([
      Validatorless.required('Campo obrigatório'),
      Validatorless.min(3, 'Identificador muito curto'),
    ])(value);
  }

  String? passwordValidator(String? value) {
    return Validatorless.multiple([
      Validatorless.required('Senha obrigatória'),
      Validatorless.min(8, 'Mínimo de 8 caracteres'),
    ])(value);
  }

  Future<void> onLoginPressed(BuildContext context) async {
    final formValid = formKey.currentState?.validate() ?? false;
...
